# faster_xml

./: .gitignore  Cargo.toml  Cargo.toml.backup  README.md  rebar.config
.github/workflows/: main.yml
crates/faster_xml_nif/src/: lib.rs
rust_src/faster_xml_nif/: Cargo.toml
rust_src/faster_xml_nif/src/: element.rs  emitter.rs  lib.rs  read_spec.rs
src/: cargo.hrl  crates.hrl  faster_xml.app.src  faster_xml.erl
