[package]
name = "faster_xml_nif"
version = "0.1.0"
authors = ["Benedikt Reinartz <filmor@gmail.com>"]
edition = "2018"

[lib]
name = "faster_xml_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = { git = "https://github.com/rusterlium/rustler.git" }
lazy_static = "1.4"
quick-xml = "0.18"
chrono = "0.4"
