[package]
name = "faster_xml_nif"
version = "0.1.4"
authors = ["Benedikt Reinartz <filmor@gmail.com>"]
edition = "2018"

[lib]
name = "faster_xml_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = { git = "https://github.com/rusterlium/rustler.git" }
quick-xml = "0.20"
chrono = "0.4"
